# KASDVSO

./: Cargo.toml  LICENSE.md  Readme.md
.github/workflows/: rust.yml
examples/example1/: app.kas
examples/ws/: app.kas  echo_client.kas
src/: lib.rs  main.rs  native_bridge.rs  package_manager.rs  parser.rs  runtime.rs  types.rs
src/native_std/: mod.rs  ws.rs
src/std_lib/: array_std.rs  fs_std.rs  http_std.rs  json_std.rs  math_std.rs  mod.rs  string_std.rs  time_std.rs
