[package]
name = "kasdvso"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "kasdvso"
path = "src/main.rs"

[lib]
name = "kasdvso"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
libloading = "0.8"
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }
tungstenite = "0.23"
url = "2"
lazy_static = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
